mejoras en documentacion
